# cereberus-security

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml  requirements-dev.txt  requirements.txt
backend/: config.py  database.py  dependencies.py  main.py
backend/ai/: __init__.py  anomaly_detector.py  behavioral_baseline.py  ensemble_detector.py  explainability.py  isolation_forest_detector.py  nlp_analyzer.py  rule_engine.py  threat_correlator.py  threat_forecaster.py  zscore_detector.py
backend/alerting/: manager.py
backend/api/: router.py
backend/auth/: __init__.py  rbac.py
backend/bridge/: __init__.py  contracts.py  validators.py
backend/engine/: __init__.py  incident_manager.py  playbook_executor.py  remediation.py
backend/export/: __init__.py  exporter.py
backend/intel/: __init__.py  abuseipdb.py  confidence.py  feed_manager.py  ioc_matcher.py  urlhaus.py  virustotal.py  yara_scanner.py
backend/middleware/: csrf.py  (+5 more)
certs/: README.md
docs/: index.html
frontend/: index.html  package-lock.json  package.json  vite.config.ts
marketing/: capture_screenshots.py  differentiators.md  pitch-deck.html  render_posts.py  social-media.md
scripts/: bridge_sync_check.py  health_check.py  install_service.py  setup_windows.ps1
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  sidecar.rs
tests/: conftest.py
yara_rules/: malware_signatures.yar  ransomware_indicators.yar  suspicious_strings.yar  webshells.yar
(+238 files in other folders)
