[package]
name = "cereberus"
version = "1.6.0"
description = "CEREBERUS — AI-Powered Cybersecurity Defense System"
authors = ["Cereberus Team"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking"] }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winbase", "processthreadsapi", "handleapi", "tlhelp32"] }
